Elements too small width bug fixed

--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ hr {
 	font-size: 4vw;
 	color: #fff;
 	background-color: rgba(0,0,0,0.8);
+	width: 100vw;
 }
 
 /* ---------------------- Otsikkoruutu ----------------- */
@@ -217,6 +218,8 @@ hr {
 	width: 100%;
 	height: 100vh;	
 	margin-top: 0px;
+	
+	width: 100vw;
 }
 
 @keyframes fly_in_top {
@@ -278,6 +281,7 @@ hr {
 	min-height: 50px;
 	max-height: 100vw;
 	height: 50vh;
+	width: 100vw;
 }
 /* ----------------------------------------------------- */
 
@@ -296,7 +300,7 @@ hr {
 /* --------------------- Tekstiosiot ------------------- */
 .d-flex {
 	display: flex;
-	width: 100%;
+	width: 100vw;
 	aspect-ratio: 16/10;
 	margin-top: 0px;
 }
@@ -406,7 +410,7 @@ hr {
 }
 
 .loppu_gradient{
-	background-image: linear-gradient(rgba(0,0,0,0), #444);
+	background-image: linear-gradient(rgba(0,0,0,0), #333);
 	min-height: 50px;
 	max-height: 100vw;
 	height: 50px;
@@ -414,7 +418,7 @@ hr {
 }
 
 .loppu {
-	background-color: #444;
+	background-color: #333;
 	width: 100vw;
 	
 	font-family: "Orbitron", sans-serif;
